- 19/08/2021
69. dknewkey: added options to print, remove, generate DKIM keys
70. indimail-mta.spec, PKGBUILD.in, create_services.in,
	debian/indimail-mta.postinst - changes for modified dknewkey
71. qmail-smtpd.c - disable VRFY using DISABLE_VRFY env variable
- 20/08/2021
72. svctool, indimail-mta.spec, PKGBUILD, debian postinst: remove host
    component from default domain

* 
Release 2.13 Start 14/02/2021
======= Release Highlights ================================================
o qmail-direct for delivering local mails directly to a user without using
  the queue.
o new function set_environment() to load environment variables from
$HOME/.defaultqueue and sysconfdir/control/defaultqueue
o Configurable directory split
o qmail-send ability to rate limit. New service slowq-send
o qmta-send - tiny self sufficient daemon based on
  qmail-send+qmail-lspawn+qmail-lspawn code replacing separate qmail-send,
  qmail-lspawn, qmail-rspawn and qmail-clean processes.
o split qmail-multi into qmail-multi and qmail-spamfilter
o complete rewrite of qmail-showctl.
o moved date822fmt, pathexec_run, pathexec_env, envdir, makeargs, mktempfile
  cdbmss, token822, openreadclose, prot_uid, prot_gid functions to libqmail
o qmail-local.c: add S=message_size in filename for faster quota calculations
  by dovecot, courier-imap
o qmail-local.c: move maildir delivery code to maildir_deliver.c
o maildirdeliver: complete rewrite using maildir_deliver() function.
o prioq.c: added feature to get prioq list in both descending and ascending
  order
o log current delivery rate and configured delivery rate in qmail-send logs
o document all indimail-mta environment variable in indimail-env man page
o use glibc wrappers for qgetpwent, setpwent, endpwent, qgetpwent_r,
  qgetpwnam, qgetpwuid, qgetpwnam_r, qgetpwuid_r, qgetgrent, qsetgrent,
  qendgrent, qgetgrnam, qgetgrgid, qgetgrnam_r, qgetgrgid_r
o ability of qmta-send to process messages queued by clients with any split
  value